// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InfoModal should be rendered correctly > should render Paste shortcut message if Paste message dispatched to props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dialog
        class="_dialog_f84003 _infoModal_aae9af"
        data-testid="info-modal-window"
        open=""
        tabindex="-1"
      >
        <header
          class="_header_f84003"
        >
          <div>
            Error Message
          </div>
          <div
            class="_btnContainer_f84003"
          >
            <button
              class="_buttonTop_f84003"
              data-testid="close-window-button"
            >
              <svg
                class="_closeButton_f84003"
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4617 12.0459L19.8327 18.4169L18.4187 19.8309L12.0477 13.4599L5.72072 19.7859L4.30672 18.3719L10.6337 12.0459L4.26172 5.67387L5.67572 4.25987L12.0477 10.6319L18.4647 4.21387L19.8787 5.62787L13.4617 12.0459Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="_body_f84003 _withMargin_f84003"
          data-testid="info-modal-body"
        >
          <div>
            <div
              class="_pasteErrorModalBody_74d1f9"
              data-testid="error-message-body"
            >
              <div>
                Your browser doesn't allow pasting clipboard content via button. Please use shortcut instead.
              </div>
              <div
                class="_shortcutsBlock_74d1f9"
              >
                <div
                  class="_shortcuts_74d1f9"
                >
                  <div
                    class="_shortcut_74d1f9"
                    data-testid="infoModal-shortcut-for-paste"
                  >
                    CTRL/Cmd + V
                  </div>
                  <div>
                    for paste
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="_footer_f84003"
        >
          <button
            class="_ok_aae9af"
            data-testid="info-modal-close"
          >
            Close
          </button>
        </footer>
      </dialog>
    </div>
  </body>,
  "container": <div>
    <dialog
      class="_dialog_f84003 _infoModal_aae9af"
      data-testid="info-modal-window"
      open=""
      tabindex="-1"
    >
      <header
        class="_header_f84003"
      >
        <div>
          Error Message
        </div>
        <div
          class="_btnContainer_f84003"
        >
          <button
            class="_buttonTop_f84003"
            data-testid="close-window-button"
          >
            <svg
              class="_closeButton_f84003"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4617 12.0459L19.8327 18.4169L18.4187 19.8309L12.0477 13.4599L5.72072 19.7859L4.30672 18.3719L10.6337 12.0459L4.26172 5.67387L5.67572 4.25987L12.0477 10.6319L18.4647 4.21387L19.8787 5.62787L13.4617 12.0459Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </header>
      <div
        class="_body_f84003 _withMargin_f84003"
        data-testid="info-modal-body"
      >
        <div>
          <div
            class="_pasteErrorModalBody_74d1f9"
            data-testid="error-message-body"
          >
            <div>
              Your browser doesn't allow pasting clipboard content via button. Please use shortcut instead.
            </div>
            <div
              class="_shortcutsBlock_74d1f9"
            >
              <div
                class="_shortcuts_74d1f9"
              >
                <div
                  class="_shortcut_74d1f9"
                  data-testid="infoModal-shortcut-for-paste"
                >
                  CTRL/Cmd + V
                </div>
                <div>
                  for paste
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <footer
        class="_footer_f84003"
      >
        <button
          class="_ok_aae9af"
          data-testid="info-modal-close"
        >
          Close
        </button>
      </footer>
    </dialog>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`InfoModal should be rendered correctly > should render default error message for Cut and Copy actions 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dialog
        class="_dialog_f84003 _infoModal_aae9af"
        data-testid="info-modal-window"
        open=""
        tabindex="-1"
      >
        <header
          class="_header_f84003"
        >
          <div>
            Error Message
          </div>
          <div
            class="_btnContainer_f84003"
          >
            <button
              class="_buttonTop_f84003"
              data-testid="close-window-button"
            >
              <svg
                class="_closeButton_f84003"
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4617 12.0459L19.8327 18.4169L18.4187 19.8309L12.0477 13.4599L5.72072 19.7859L4.30672 18.3719L10.6337 12.0459L4.26172 5.67387L5.67572 4.25987L12.0477 10.6319L18.4647 4.21387L19.8787 5.62787L13.4617 12.0459Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </header>
        <div
          class="_body_f84003 _withMargin_f84003"
          data-testid="info-modal-body"
        >
          <div>
            This action is unavailable via menu. Instead, use shortcut to Cut.
          </div>
        </div>
        <footer
          class="_footer_f84003"
        >
          <button
            class="_ok_aae9af"
            data-testid="info-modal-close"
          >
            Close
          </button>
        </footer>
      </dialog>
    </div>
  </body>,
  "container": <div>
    <dialog
      class="_dialog_f84003 _infoModal_aae9af"
      data-testid="info-modal-window"
      open=""
      tabindex="-1"
    >
      <header
        class="_header_f84003"
      >
        <div>
          Error Message
        </div>
        <div
          class="_btnContainer_f84003"
        >
          <button
            class="_buttonTop_f84003"
            data-testid="close-window-button"
          >
            <svg
              class="_closeButton_f84003"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.4617 12.0459L19.8327 18.4169L18.4187 19.8309L12.0477 13.4599L5.72072 19.7859L4.30672 18.3719L10.6337 12.0459L4.26172 5.67387L5.67572 4.25987L12.0477 10.6319L18.4647 4.21387L19.8787 5.62787L13.4617 12.0459Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </header>
      <div
        class="_body_f84003 _withMargin_f84003"
        data-testid="info-modal-body"
      >
        <div>
          This action is unavailable via menu. Instead, use shortcut to Cut.
        </div>
      </div>
      <footer
        class="_footer_f84003"
      >
        <button
          class="_ok_aae9af"
          data-testid="info-modal-close"
        >
          Close
        </button>
      </footer>
    </dialog>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
